--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,26 +1,26 @@
-<nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark ">
   <div class="container-fluid">
     <!-- Navbar a la izquierda -->
     <img src="../../../assets/salem_final.png" class="navbar-brand me-auto img" href="#">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <!-- Items alineados a la derecha -->
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item"(click)="toggleNavbar()">
           <button class="nav-link" (click)="onNavigate('banner')">Home</button>
         </li>
-        <li class="nav-item">
+        <li class="nav-item"(click)="toggleNavbar()">
           <button class="nav-link" (click)="onNavigate('presentation')">¿Por qué elegirnos?</button>
         </li>
 
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown"(click)="toggleNavbar()">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
           <ul class="dropdown-menu mt-2">
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><button class="dropdown-item" (click)="onNavigate('manera')">Action</button></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
