--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -13,7 +13,7 @@
 
     <div class="divider"></div>
 
-      <div class="content-wrapper ">
+      <div id="manera" class="content-wrapper ">
         <div #carouselExample class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
           <div class="carousel-inner">
             <div
@@ -39,7 +39,9 @@
         </p>
       </div>
     </div>
+
     <div class="divider"></div>
+    
     <div class="container text-center py-5">
       <h2>Nuestra manera</h2>
       <div class="row justify-content-center">
