--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -1,15 +1,4 @@
-/* Animación de gradiente para el fondo */
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
+
 
 /* Animación de aparición */
 @keyframes fadeIn {
@@ -24,6 +13,17 @@
     transform: translateY(0);
   }
 }
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
 /* Sección de presentación */
 #presentation {
@@ -32,9 +32,8 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to right, #000000, rgb(2, 65, 255,0.5));
+  background-color: #000000;
   background-size: 200% 100%;
-  animation: gradientAnimation 20s ease infinite;
   min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
@@ -43,6 +42,7 @@
 
 /* Título */
 h2.text-center {
+
   text-align: center;
   color: #e0c097; /* Un dorado claro elegante */
   text-shadow: #000000 0 4px 4px;
@@ -85,11 +85,11 @@ h2.text-center::after {
   border-radius: 20px;
   transform: translateY(0);
   /*Posicióninicial*/overflow: auto;
-  transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out,    background-color 0.5s ease-in-out;
+  transition: transform 1s ease-in-out, box-shadow 1s ease-in-out,background-color 1.5s ease-in-out;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8) !important;
-  background: url(../../../../assets/fondo-card.jpg);
-  background-size: cover;
+  background:#e0c097;
   animation: fadeIn 5s ease-in-out forwards;
+  
   
 }
 .card-title{
@@ -113,6 +113,8 @@ h2.text-center::after {
     rgba(0, 0, 0, 0.1)
   ); /* Ajusta el alfa para la transparencia */
   color: #e0c097;
+  border: 1.5px solid rgba(224, 192, 151, 0.6)!important; /* Borde del mismo color que la línea */
+  border-radius: 20px !important; /* Bordes redondeados */
 }
 /* Animación secuencial: Añadiendo retrasos */
 .card:nth-child(1) {
