--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 #banner {
   flex: 1;
   background: url('../../../assets/mano-humana-escribiendo-teclado-computadora-noche-generada-ai.jpg') no-repeat center center;
@@ -49,6 +50,7 @@
 }
 
 #banner-text {
+  font-family: "Bebas Neue", sans-serif;
   font-size: 2.5rem; /* Tamaño de fuente más grande */
   font-weight: bold;
   letter-spacing: 1px; /* Espaciado entre letras para un efecto refinado */
