--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -13,7 +13,7 @@
   </div>
   
   <!-- Carrusel para pantallas pequeñas -->
-  <div id="cardsCarousel" class="carousel slide d-block d-md-none" data-bs-ride="carousel"data-bs-interval="3000">
+  <div id="cardsCarousel" class="carousel slide d-block d-md-none" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item" *ngFor="let card of cards; let i = index" [class.active]="i === 0">
         <div class="card border-0 shadow-sm mx-auto" style="width: 100%;">
@@ -25,19 +25,16 @@
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#cardsCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon visually-hidden" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#cardsCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon visually-hidden" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+    <button class="carousel-control-next" type="button" data-bs-target="#cardsCarousel" data-bs-slide="next">     
     </button>
   </div>
+  
       
     <div class="divider"></div>
 
       <div id="manera" class="content-wrapper ">
-        <div #carouselExample class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+        <div id="imagescarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
           <div class="carousel-inner">
             <div
               class="carousel-item"
