--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -16,7 +16,7 @@
   <div id="cardsCarousel" class="carousel slide d-block d-md-none" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item" *ngFor="let card of cards; let i = index" [class.active]="i === 0">
-        <div class="card border-0 shadow-sm mx-auto" style="width: 100%;">
+        <div class="card border-0 shadow-sm mx-auto" >
           <div class="card-body">
             <h5 class="card-title">{{ card.title }}</h5>
             <p class="card-text">{{ card.text }}</p>
@@ -34,7 +34,7 @@
     <div class="divider"></div>
 
       <div id="manera" class="content-wrapper ">
-        <div id="imagescarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+        <div id="imagescarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000">
           <div class="carousel-inner">
             <div
               class="carousel-item"
