reestruturation project in segments

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,6 +2,8 @@
 @defer () {
     <app-banner></app-banner> 
     <app-menu-item></app-menu-item> 
+    <app-nosotros></app-nosotros>
+    <app-nuestra-manera></app-nuestra-manera>
 }
 
 
