--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -33,7 +33,6 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -43,7 +42,7 @@
 h2.text-center {
 
   text-align: center;
-  color: #c0c0c0; 
+  color: #ffffff; 
   text-shadow: #000000 0 4px 4px;
   font-size: 2.5rem; /* Tamaño de fuente más grande */
   font-weight: bold;
@@ -52,6 +51,12 @@ h2.text-center {
   margin-bottom: 30px; /* Espacio inferior ajustado */
   position: relative;
   display: inline-block;
+  transition: color 0.5s ease-in-out; /* Transición suave del color */
+
+    &:hover {
+      color: #000000; /* Color al hacer hover */
+      text-shadow: #ffffff 0 1px 1px;
+    }
 }
 
 h2.text-center::after {
@@ -114,11 +119,11 @@ h2.text-center::after {
 .card:hover {
   transform: translateY(-10px) rotateX(10deg) rotateY(10deg) scale(1.05) ;
   
-  background: black; /* Ajusta el alfa para la transparencia */
-  color: #c0c0c0;
+  background:rgba(0, 0, 0, 0.8); /* Ajusta el alfa para la transparencia */
+  color: #ffffff;
   border: 1.5px solid rgba(214, 214, 214, 0.6)!important; /* Borde del mismo color que la línea */
   border-radius: 20px !important; /* Bordes redondeados */
-  box-shadow: 0 3px 8px rgba(255, 255, 255, 0.81)!important; /* Sombra más pronunciada */
+  box-shadow: 0 3px 8px rgba(6, 10, 41, 0.81)!important; /* Sombra más pronunciada */
 }
 /* Animación secuencial: Añadiendo retrasos */
 .card:nth-child(1) {
@@ -131,82 +136,6 @@ h2.text-center::after {
 
 .card:nth-child(3) {
   animation-delay: 5s; /* 0.4 segundos de retraso */
-}
-.divider {
-  width: 80%;
-  height: 2px;
-  background-color: rgba(232, 232, 232, 0.6); /* Color dorado claro para la línea */
-  margin: 40px auto; /* Espacio alrededor de la línea y centrado horizontal */
-  
-}
-/* Ajustes para la tarjeta descriptiva */
-.content-wrapper {
-  
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 90%;
-  margin: 0 auto;
-}
-
-/* Imagen personalizada */
-.custom-img {
-  width: 50%;
-  max-width: 600px;
-  height: auto ;
-  object-fit: cover;
-  border: 2px solid rgba(232, 232, 232, 0.6); /* Borde del mismo color que la línea */
-  border-radius: 15px; /* Bordes redondeados */
-  transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-}
-#imagescarousel {
-  width: 50%; /* Este valor debe coincidir con el ancho de .custom-img */
-  max-width: 600px;
-  min-height: 400px; /* Ajusta este valor según la altura de tus imágenes */
-  overflow: hidden;
-
-}
-.carousel-item-next .custom-img,
-.carousel-item-prev .custom-img {
-  transform: translateX(5%) scale(0.7); /* Mueve y reduce ligeramente la imagen durante la transición */
-}
-
-.carousel-item.active .custom-img {
-  transform: translateX(0) scale(1); /* Restaura la imagen cuando está activa */
-}
-
-
-.carousel-item {
-transition: transform 3s ease-in-out !important;
-}
-
-/* Contenedor de texto */
-.text-content { 
-  color: #c0c0c0	;
-  max-width: 600px; 
-  margin-bottom: 50px;
-}
-
-/* Título de la sección */
-.section-title {
-  color: #c0c0c0	; 
- /* Fuente serif para un toque formal */
-  font-size: 2.5rem; /* Tamaño de fuente más grande */
-  font-weight: bold;
-  letter-spacing: 1px; /* Espaciado entre letras para un efecto refinado */
-  text-transform: uppercase; /* Todo en mayúsculas para un impacto visual mayor */
-  margin-bottom: 30px; /* Espacio inferior ajustado */
-  position: relative;
-  display: inline-block;
-  
-}
-
-
-/* Texto de la sección */
-.section-text {
-  font-size: 1.1rem;
-  line-height: 1.8;
-  text-align: left;
 }
 
 /* Añadir sombra al texto para mejorar la legibilidad */
@@ -223,58 +152,6 @@ transition: transform 3s ease-in-out !important;
     transform: translateY(0);
   }
 }
-
-  .container{
-    margin-top: -50px;
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    color: #c0c0c0	;
-  }
-
-  .icon-wrapper {
-    transition: transform 0.3s ease-in-out;
-    opacity: 0;
-    transform: scale(0.8);
-    animation: fadeInUp 0.5s ease-in-out forwards;
-
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
-
-    &:hover {
-      transform: scale(1.2) rotateY(180deg ) ;
-      transition: transform 0.5s ease-in-out;
-    }
-  }
-
-  h2 {
-    color: #c0c0c0	; 
-/* Fuente serif para un toque formal */
-    font-size: 2.5rem; /* Tamaño de fuente más grande */
-    font-weight: bold;
-    letter-spacing: 1px; /* Espaciado entre letras para un efecto refinado */
-    text-transform: uppercase; /* Todo en mayúsculas para un impacto visual mayor */
-    margin-bottom: 30px; /* Espacio inferior ajustado */
-    position: relative;
-    display: inline-block;
-  }
-
-  h4 {
-    margin-top: 1rem;
-    font-size: 1.2rem;
-    
-  }
-
-  p {
-    
-    font-size: 0.9rem;
-  }
-
-
 
   @media (min-width: 768px) {
     .row .card {
@@ -317,59 +194,16 @@ transition: transform 3s ease-in-out !important;
 }
 
 .card:hover {
-  transform: scale(0.85) ;
-  background: black !important;
+  transform: scale(1.00) ;
+  width: 90%;
+  background:rgba(0, 0, 0, 0.8) !important;
   /*Ajustaelalfaparalatransparencia*/color: #c0c0c0	;
   border: 1.5px solid rgba(232, 232, 232, 0.6)!important;
   /*Bordedelmismocolorquelalínea*/border-radius: 20px !important;
-  -webkit-transform: scale(0.85) ;
-  -moz-transform: scale(0.85) ;
-  -ms-transform: scale(0.85) ;
-  -o-transform: scale(0.85) ;
+  -webkit-transform: scale(1.00) ;
+  -moz-transform: scale(1.00) ;
+  -ms-transform: scale(1.00) ;
+  -o-transform: scale(1.00) ;
 }
-/* seccion 2*/
-.custom-img, #imagescarousel {
-  width: 90%; /* La imagen y el carrusel ocupan el ancho completo */
-  min-height: auto; /* Permite que la altura sea flexible */
-  transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1); /* Transición suave en el cambio de imágenes */
 
-}
-  .content-wrapper {
-    flex-direction: column;
-    align-items:center;
-  }
-
-  .carousel-item-next .custom-img,
-  .carousel-item-prev .custom-img {
-    transform: translateX(10%) scale(0.5); /* Desplaza la imagen y la reduce ligeramente durante la transición */
-  }
-  
-  .carousel-item.active .custom-img {
-    transform: translateX(0) scale(1); /* Restaura la imagen a su tamaño original cuando está activa */
-  }
-
-  .text-content {
-    text-align: center;
-    max-width: 100%;
-  }
-
-  .section-title {
-    padding-top: 20px;
-    font-size: 2rem;
-    margin-bottom: 20px;
-    margin-right: 30px;
-  }
-
-  .section-text {
-    font-size: 1.2rem;
-    line-height: 1;
-    margin-right: 20px;
-  }
-  .icon-wrapper img {
-    max-width: 100px; /* Reducir el tamaño en tablets */
-    max-height: 100%;
-  }
-  .icon-wrapper:hover {
-    transform: scale(0.8) rotateY(180deg 0.10s); /* Mantener el hover más pequeño en móviles */
-  }
 }
