--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -18,15 +18,13 @@
 .navbar-brand:hover,
 .nav-link:hover {
  
-  color: #b3b3b3;
+  color: #c0c0c0;
 }
-
-
 
 .dropdown-menu,
 .dropdown-item {
-  background-color: rgba(0, 0, 0, 0.3); /* Fondo negro con 80% de opacidad */
-  color: #c0c0c0;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo negro con 80% de opacidad */
+  color: #ffffff;
 }
 
 .img {
