--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,6 +4,7 @@
     <app-menu-item></app-menu-item> 
     <app-nosotros></app-nosotros>
     <app-nuestra-manera></app-nuestra-manera>
+    <app-contact></app-contact>
 }
 
 
