lazy loading , and section2

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
 <!-- Banner Section -->
-<section id="banner" class="banner">
+<section id="home" class="banner">
   <div id="banner-content">
   </div>
   </section>
