--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,5 +1,5 @@
 
-#banner {
+#home {
   flex: 1;
   background: url('../../../assets/mano-humana-escribiendo-teclado-computadora-noche-generada-ai.jpg') no-repeat center center;
   background-size: cover; /* Asegura que la imagen cubra todo el área del banner */
