--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -9,25 +9,27 @@
         <!-- Items alineados a la derecha -->
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <button class="nav-link" (click)="handleNavClick('banner')">Home</button>
+            <button class="nav-link" (click)="handleNavClick('home')">Home</button>
           </li>
-          <li class="nav-item">
-            <button class="nav-link" (click)="handleNavClick('presentation')">¿Por qué elegirnos?</button>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu mt-3">
-              <li><button class="dropdown-item" (click)="handleNavClick('manera')">Action</button></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
+          
+            <li class="nav-item" *ngIf="!router.url.includes('/seccion2')">
+              <button class="nav-link" (click)="handleNavClick('presentation')">¿Por qué elegirnos?</button>
+            </li>
+            <li class="nav-item dropdown" *ngIf="!router.url.includes('/seccion2')">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Más info
+              </a>
+              <ul class="dropdown-menu mt-3">
+                <li><button class="dropdown-item" (click)="navigateToSeccion2()">Trabaja con nosotros</button></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"*ngIf="!router.url.includes('/seccion2')">
+              <button class="nav-link" (click)="handleNavClick('contact')">Contáctanos</button>
+            </li>
         </ul>
+        
       </div>
     </div>
   </nav>
