--- a/src/app/components/nabvar/nosotros/nosotros.component.html
+++ b/src/app/components/nabvar/nosotros/nosotros.component.html
@@ -13,7 +13,7 @@
           </div>
         </div>
       <div class="text-content ms-5">
-        <h2 class="section-title">Nuestro Equipo</h2>
+        <h2 class="section-title">Nosotros...</h2>
         <p class="section-text">
           Contamos con una amplia red de profesionales internos y externos que
           nos permite integrar soluciones en todos los ámbitos de la
