--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,5 @@
 <!-- Botón de contacto -->
-<div class="text-center my-5">
+<div id="contact" class="text-center my-5">
   <button type="button" class="btn btn-primary btn-lg btn-contacto" data-bs-toggle="modal" data-bs-target="#contactModal">
     Contactanos!
   </button>
