--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,10 +1,12 @@
 <app-nabvar></app-nabvar>
-@defer () {
-    <app-banner></app-banner> 
-    <app-menu-item></app-menu-item> 
-    <app-nosotros></app-nosotros>
-    <app-nuestra-manera></app-nuestra-manera>
-    <app-contact></app-contact>
+@defer() {
+  <section id="banner">
+    <app-banner></app-banner>
+  </section>
+  <section id="presentation">
+    <app-menu-item></app-menu-item>
+  </section>
+  <app-nosotros></app-nosotros>
+  <app-nuestra-manera></app-nuestra-manera>
+  <app-contact></app-contact>
 }
-
-
