--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -2,8 +2,8 @@
       <h2 class="text-center mb-4">¿Por qué elegirnos?</h2>
       <!-- Vista en pantallas grandes -->
   <div class="row justify-content-center d-none d-md-flex">
-    <div class="col-md-3 mb-4" *ngFor="let card of cards; let i = index">
-      <div class="card border-0 shadow-sm">
+    <div class="col-md-3 " *ngFor="let card of cards; let i = index">
+      <div class="card border-2 shadow-sm">
         <div class="card-body">
           <h5 class="card-title">{{ card.title }}</h5>
           <p class="card-text">{{ card.text }}</p>
