--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -68,5 +68,6 @@ input.ng-touched.ng-invalid, textarea.ng-touched.ng-invalid {
 }
 
 input.ng-touched.ng-valid, textarea.ng-touched.ng-valid {
-  border-color: green;
+  border-color: rgb(0, 255, 0);
+  
 }
