--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -17,14 +17,25 @@
 
 .navbar-brand:hover,
 .nav-link:hover {
- 
-  color: #c0c0c0;
+ background-color: white;
+ border-radius: 20px;
+ color: #000000;
+ -webkit-border-radius: 20px;
+ -moz-border-radius: 20px;
+ -ms-border-radius: 20px;
+ -o-border-radius: 20px;
 }
 
 .dropdown-menu,
 .dropdown-item {
   background-color: rgba(0, 0, 0, 0.5); /* Fondo negro con 80% de opacidad */
   color: #ffffff;
+}
+.dropdown-item:hover
+{
+  color: #000000;
+  background-color: rgba(255, 255, 255); 
+  border-radius: 20px;
 }
 
 .img {
