--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,18 +1,20 @@
-<nav id="navbar" class="navbar navbar-expand-lg" [class.collapsed]="isNavbarCollapsed">
+<nav id="navbar" class="navbar navbar-expand-lg">
   <div class="container-fluid">
+    <!-- Navbar a la izquierda -->
     <img src="../../../assets/salem_final.png" class="navbar-brand me-auto img" alt="Brand Logo">
-    <button class="navbar-toggler" type="button" (click)="toggleNavbar()" aria-controls="navbarNav" aria-expanded="!isNavbarCollapsed" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" [ngClass]="{'show': !isNavbarCollapsed}" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <!-- Items alineados a la derecha -->
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <button class="nav-link" (click)="handleNavClick('home')">Home</button>
         </li>
-        <li class="nav-item" *ngIf="!isInSeccion2">
+        <li class="nav-item" *ngIf="!router.url.includes('/seccion2')">
           <button class="nav-link" (click)="handleNavClick('presentation')">¿Por qué elegirnos?</button>
         </li>
-        <li class="nav-item dropdown" *ngIf="!isInSeccion2">
+        <li class="nav-item dropdown" *ngIf="!router.url.includes('/seccion2')">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Más info
           </a>
@@ -22,7 +24,7 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <li class="nav-item" *ngIf="!isInSeccion2">
+        <li class="nav-item" *ngIf="!router.url.includes('/seccion2')">
           <button class="nav-link" (click)="handleNavClick('contact')">Contáctanos</button>
         </li>
       </ul>
